--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,3 @@
-<app-student-list></app-student-list>
+<!-- <app-student-list></app-student-list> -->
+<!-- <app-student-template-form></app-student-template-form> -->
+<router-outlet></router-outlet>
