--- a/src/app/student/student-detail/student-detail.component.html
+++ b/src/app/student/student-detail/student-detail.component.html
@@ -1,2 +1,3 @@
 <h3>this is student detail: {{detail.name}}</h3>
+<button [routerLink]="['/student', detail.id]">Details</button>
 <button (click)="onRemove()">Remove pokemon</button>
