--- a/src/app/student/student-list/student-list.component.html
+++ b/src/app/student/student-list/student-list.component.html
@@ -11,6 +11,7 @@
                 <td class="student-td">
                     {{i}}:{{student.name}}
                 </td>
+                <h1>this is content</h1>
                 <td class="student-td">
                     <!-- [ngClass]="{'cool-bool': student.pass}" {{i}}:{{student.name}} -->
                 </td>
