--- a/src/app/student/student-detail/student-detail.component.html
+++ b/src/app/student/student-detail/student-detail.component.html
@@ -1,3 +1,4 @@
+<ng-content select="h1"></ng-content>
 <h3>this is student detail: {{detail.name}}</h3>
 <button [routerLink]="['/student', detail.id]">Details</button>
 <button (click)="onRemove()">Remove pokemon</button>
