--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,6 @@
 <!-- <app-student-template-form></app-student-template-form> -->
 <!-- <router-outlet></router-outlet> -->
 
-<app-ChangeDetection></app-ChangeDetection>
+<!-- <app-ChangeDetection></app-ChangeDetection> -->
+
+<app-Observable></app-Observable>
