subject and operator

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,4 +4,7 @@
 
 <!-- <app-ChangeDetection></app-ChangeDetection> -->
 
-<app-Observable></app-Observable>
+<!-- <app-Observable></app-Observable> -->
+<!-- <app-Operator></app-Operator> -->
+<app-Sub1></app-Sub1>
+<app-Sub2></app-Sub2>
