--- a/src/styles.css
+++ b/src/styles.css
@@ -3,3 +3,5 @@ body {
     max-width: 960px;
     margin: auto;
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
