dropbox with api

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,5 +6,7 @@
 
 <!-- <app-Observable></app-Observable> -->
 <!-- <app-Operator></app-Operator> -->
-<app-Sub1></app-Sub1>
-<app-Sub2></app-Sub2>
+<!-- <app-Sub1></app-Sub1>
+<app-Sub2></app-Sub2> -->
+<!-- <app-TestBoostrap></app-TestBoostrap> -->
+<app-DropBox></app-DropBox>
