--- a/src/styles.css
+++ b/src/styles.css
@@ -3,5 +3,15 @@ body {
     max-width: 960px;
     margin: auto;
 }
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+html,
+body {
+    height: 100%;
+}
+
+body {
+    margin: 0;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+@import "~bootstrap/dist/css/bootstrap.css";
