--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,4 +9,19 @@
 <!-- <app-Sub1></app-Sub1>
 <app-Sub2></app-Sub2> -->
 <!-- <app-TestBoostrap></app-TestBoostrap> -->
-<app-DropBox></app-DropBox>
+<!-- <app-DropBox></app-DropBox> -->
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid">
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+                <a class="nav-link active" aria-current="page" href="observable">observable</a>
+                <a class="nav-link" href="operator">operator</a>
+                <a class="nav-link" href="subject">subject</a>
+                <a class="nav-link" href="dropbox">dropbox</a>
+                <a class="nav-link" href="student">Student</a>
+
+            </div>
+        </div>
+    </div>
+</nav>
+<router-outlet></router-outlet>
